# otus_h7_bulk

./: .travis.yml  CMakeLists.txt  README.md
src/: .travis.yml  main.cpp  observer.cpp  observer.h  packet.cpp  packet.h
tests/: gtest.cpp
